Change footer text to 'Personal Site'

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     </main>
 
     <footer>
-        <p>© {{ site.time | date: '%Y' }} 我的个人网站</p >
+        <p>© {{ site.time | date: '%Y' }} Personal Site</p >
     </footer>
 </body>
 </html>
