Add footer include to default layout
Included footer.html in the main layout.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     {% include header.html %}
 
     <main>
-        {{ content }} <!-- 这是最关键的：你的文章内容会显示在这里 -->
+        {{ content }} {% include footer.html%} <!-- 这是最关键的：你的文章内容会显示在这里 -->
     </main>
 
     <footer>
